[gd_scene load_steps=16 format=2]

[ext_resource path="res://assets/gui_item_bg.png" type="Texture" id=1]
[ext_resource path="res://assets/Roboto-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/asteroid.png" type="Texture" id=3]
[ext_resource path="res://assets/HumanAstro.png" type="Texture" id=4]
[ext_resource path="res://assets/medbay.png" type="Texture" id=5]
[ext_resource path="res://assets/wire_gui.png" type="Texture" id=6]
[ext_resource path="res://Scripts/UI/RichTextLabel.gd" type="Script" id=7]
[ext_resource path="res://Scenes/PlanetGauges/EarthGauge.tscn" type="PackedScene" id=8]
[ext_resource path="res://Scripts/UI/GUI.gd" type="Script" id=9]
[ext_resource path="res://Scenes/UI/AsteroidLabel.gd" type="Script" id=10]
[ext_resource path="res://Scenes/PlanetGauges/MarsGauge.tscn" type="PackedScene" id=11]
[ext_resource path="res://assets/mars-dust.png" type="Texture" id=12]
[ext_resource path="res://Scenes/UI/QuitBtn.gd" type="Script" id=13]

[sub_resource type="DynamicFont" id=1]
size = 22
font_data = ExtResource( 2 )

[sub_resource type="DynamicFont" id=2]
size = 12
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 2 )

[node name="Control" type="Control"]
anchor_top = -0.000396322
anchor_right = 1.0
anchor_bottom = 0.999604
margin_left = -4.13886
margin_top = -0.699368
margin_right = -4.13885
margin_bottom = -0.699402
mouse_filter = 2
script = ExtResource( 9 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="HUD" type="NinePatchRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 10.4713
margin_top = -511.67
margin_right = 187.471
margin_bottom = -120.67
texture = ExtResource( 1 )
patch_margin_left = 39
patch_margin_top = 34
patch_margin_right = 40
patch_margin_bottom = 35
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="HUD"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -52.95
margin_top = 25.3268
margin_right = 51.05
margin_bottom = 82.3268
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CONTROL 
PANEL"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resources" type="NinePatchRect" parent="."]
anchor_top = 1.0
anchor_bottom = 1.0
margin_left = 8.5399
margin_top = -177.152
margin_right = 188.54
margin_bottom = -11.1517
texture = ExtResource( 1 )
patch_margin_left = 36
patch_margin_top = 34
patch_margin_right = 36
patch_margin_bottom = 35
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Resources"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -61.5
margin_top = 17.2174
margin_right = 61.5
margin_bottom = 44.2174
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "RESOURCES"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="AsteroidProgress" type="ProgressBar" parent="Resources"]
margin_left = 50.38
margin_top = 50.095
margin_right = 162.38
margin_bottom = 66.095
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resource" type="Label" parent="Resources/AsteroidProgress"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.5094
margin_bottom = 1.5094
text = "0/100"
align = 1
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TextureRect" type="TextureRect" parent="Resources"]
margin_left = 12.5867
margin_top = 41.095
margin_right = 44.5867
margin_bottom = 73.095
texture = ExtResource( 3 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DustProgress" type="ProgressBar" parent="Resources"]
margin_left = 49.6062
margin_top = 82.5939
margin_right = 161.606
margin_bottom = 98.5939
percent_visible = false
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Resource" type="Label" parent="Resources/DustProgress"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_top = 1.5094
margin_bottom = 1.5094
text = "0/100"
align = 1
script = ExtResource( 10 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Dust" type="TextureRect" parent="Resources"]
margin_left = 24.1935
margin_top = 80.558
margin_right = 56.1935
margin_bottom = 112.558
texture = ExtResource( 12 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Transmition" type="NinePatchRect" parent="."]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -191.0
margin_top = -135.802
margin_right = 191.0
margin_bottom = -6.80188
texture = ExtResource( 1 )
patch_margin_left = 39
patch_margin_top = 33
patch_margin_right = 38
patch_margin_bottom = 35
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="Transmition"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -128.5
margin_top = 11.752
margin_right = 128.5
margin_bottom = 68.752
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "INCOMING TRANSMITION"
align = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Medbay" type="TextureRect" parent="Transmition"]
margin_left = 33.2051
margin_top = 35.5344
margin_right = 91.2051
margin_bottom = 93.5344
texture = ExtResource( 5 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Captain" type="TextureRect" parent="Transmition/Medbay"]
margin_left = 14.9643
margin_top = 15.4044
margin_right = 54.9643
margin_bottom = 55.4044
texture = ExtResource( 4 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Message" type="NinePatchRect" parent="Transmition"]
margin_left = 99.0
margin_top = 35.0
margin_right = 347.0
margin_bottom = 98.0
texture = ExtResource( 6 )
region_rect = Rect2( -0.0563507, -0.340847, 36.7839, 27.2708 )
patch_margin_left = 5
patch_margin_top = 5
patch_margin_right = 5
patch_margin_bottom = 5
axis_stretch_horizontal = 1
axis_stretch_vertical = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="RichTextLabel" type="RichTextLabel" parent="Transmition/Message"]
anchor_right = 1.0
anchor_bottom = 1.0
margin_left = 8.0
margin_top = 7.0
margin_right = -9.0
margin_bottom = -7.0
custom_fonts/normal_font = SubResource( 2 )
custom_colors/default_color = Color( 0.0901961, 0.0901961, 0.0901961, 1 )
override_selected_font_color = true
script = ExtResource( 7 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Extra" type="VBoxContainer" parent="."]
anchor_left = 0.036
anchor_top = 0.323
anchor_right = 0.16
anchor_bottom = 0.698
margin_left = 0.135998
margin_top = 0.199951
margin_right = 0.159988
margin_bottom = 0.199921
__meta__ = {
"_edit_use_anchors_": false
}

[node name="EarthGauge" parent="Extra" groups=[
"extra",
] instance=ExtResource( 8 )]
visible = false
margin_right = 126.0
margin_bottom = 78.0

[node name="MarsGauge" parent="Extra" groups=[
"extra",
] instance=ExtResource( 11 )]
visible = false
margin_right = 126.0
margin_bottom = 78.0
rect_min_size = Vector2( 0, 78 )

[node name="Button" type="Button" parent="."]
anchor_left = 0.096
anchor_top = 0.703
anchor_right = 0.096
anchor_bottom = 0.703
margin_left = -59.9299
margin_top = -57.6517
margin_right = 57.0701
margin_bottom = -37.6517
text = "Cancel Selection"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitBtn" type="Button" parent="."]
margin_left = 38.1728
margin_top = 395.034
margin_right = 155.173
margin_bottom = 415.034
text = "Quit"
script = ExtResource( 13 )
[connection signal="value_changed" from="Resources/AsteroidProgress" to="Resources/AsteroidProgress/Resource" method="_on_AsteroidProgress_value_changed"]
[connection signal="value_changed" from="Resources/DustProgress" to="Resources/DustProgress/Resource" method="_on_AsteroidProgress_value_changed"]
[connection signal="ButtonPresss" from="Extra/EarthGauge" to="." method="_on_EarthGauge_ButtonPresss"]
[connection signal="ButtonPresss" from="Extra/MarsGauge" to="." method="_on_MarsGauge_ButtonPresss"]
[connection signal="pressed" from="Button" to="." method="_on_Button_pressed"]
[connection signal="pressed" from="QuitBtn" to="QuitBtn" method="_on_QuitBtn_pressed"]
